Details
-
Bug
-
Status: Closed
-
Blocker
-
Resolution: Fixed
-
0.20
-
None
Description
The compiler error seen is:
In file included from ./qpid/framing/FrameHandler.h:23:0,
from ./qpid/framing/Proxy.h:22,
from qpid/framing/Proxy.cpp:19:
./qpid/framing/Handler.h:52:47: error: invalid use of incomplete type 'struct qpid::framing::Handler<T>' [-Werror]
template <class F> class Functor : public Handler<T> {
^
./qpid/framing/Handler.h:32:8: error: declaration of 'struct qpid::framing::Handler<T>' [-Werror]
struct Handler {
^
./qpid/framing/Handler.h:64:30: error: invalid use of incomplete type 'struct qpid::framing::Handler<T>' [-Werror]
class MemFunRef : public Handler<T> {
^
./qpid/framing/Handler.h:32:8: error: declaration of 'struct qpid::framing::Handler<T>' [-Werror]
struct Handler {
^
cc1plus: all warnings being treated as errors
make[3]: *** [qpid/framing/Proxy.lo] Error 1
In file included from ./qpid/framing/FrameHandler.h:23:0,
from ./qpid/framing/InputHandler.h:24,
from ./qpid/framing/amqp_framing.h:28,
from ./qpid/framing/SendContent.h:22,
from qpid/framing/SendContent.cpp:22:
./qpid/framing/Handler.h:52:47: error: invalid use of incomplete type 'struct qpid::framing::Handler<T>' [-Werror]
template <class F> class Functor : public Handler<T> {
^
./qpid/framing/Handler.h:32:8: error: declaration of 'struct qpid::framing::Handler<T>' [-Werror]
struct Handler {
^
./qpid/framing/Handler.h:64:30: error: invalid use of incomplete type 'struct qpid::framing::Handler<T>' [-Werror]
class MemFunRef : public Handler<T> {
^
./qpid/framing/Handler.h:32:8: error: declaration of 'struct qpid::framing::Handler<T>' [-Werror]
struct Handler {
^