QPID-4579: Fixes building Qpid under the latest GCC (4.8.0).

Moves the definition of Functor and MemFuncRef out of Handler class
definition. Fixes the build failure in later versions of GCC.

Contributed by: Petr Machata <pmachata@redhat.com>

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1445322 13f79535-47bb-0310-9956-ffa450edef68